# anchor-multisig-demo

./: .gitignore  .prettierignore  Anchor.toml  README.md  package.json
js/: package.json
programs/multisig-demo/: Cargo.toml
programs/multisig-demo/src/: error.rs  lib.rs  state.rs
programs/multisig-demo/src/instructions/: administration.rs  approval.rs  mod.rs  new_multisig.rs  new_transaction.rs
